tests/gen-derivation/derivation/core/norec part noext 003/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Only applications to non-polymorphic type constructors are supported at the moment

DerivedGen:14:14--14:23
 10 | 
 11 | %runElab derive "X" [Generic, Meta, Show]
 12 | 
 13 | checkedGen : Fuel -> Gen CanBeEmptyStatic X
 14 | checkedGen = deriveGen
                   ^^^^^^^^^

